deploy/kubernetes.production.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: matthewandhilary
  name: matthewandhilary
  namespace: matthewandhilary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matthewandhilary
  template:
    metadata:
      labels:
        app: matthewandhilary
    spec:
      containers:
        - name: frontend
          image: spacez320/matthewandhilary:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /usr/share/nginx/html/media
              name: media
        - name: backend
          image: spacez320/matthewandhilary-backend:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: /app/media
              name: media
      volumes:
        - name: media
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: matthewandhilary
  name: matthewandhilary
  namespace: matthewandhilary
spec:
  ports:
    - name: frontend
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: backend
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: matthewandhilary
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: matthewandhilary-https-redirect
  namespace: matthewandhilary
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: matthewandhilary-rsvp-redirect
  namespace: matthewandhilary
spec:
  redirectRegex:
    permanent: true
    regex: "(?i)^https?://(www\\.)?matthewandhilary\\.net/rsvp"
    replacement: "https://forms.gle/de8VeSZ7qiEoQiZB8"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: matthewandhilary-banquet-rsvp-redirect
  namespace: matthewandhilary
spec:
  redirectRegex:
    permanent: true
    regex: "(?i)^https?://(www\\.)?matthewandhilary\\.net/nov8dinner-rsvp"
    replacement: "https://forms.gle/8sMQxQbv1Jvqy1KU7"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: matthewandhilary
  name: matthewandhilary-http
  namespace: matthewandhilary
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`matthewandhilary.net`)
      middlewares:
        - name: matthewandhilary-https-redirect
        - name: matthewandhilary-rsvp-redirect
        - name: matthewandhilary-banquet-rsvp-redirect
      kind: Rule
      services:
        - name: matthewandhilary
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: matthewandhilary
  name: matthewandhilary-https
  namespace: matthewandhilary
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matthewandhilary.net`)
      kind: Rule
      middlewares:
        - name: matthewandhilary-rsvp-redirect
        - name: matthewandhilary-banquet-rsvp-redirect
      services:
        - name: matthewandhilary
          port: 8080
  tls:
    secretName: matthewandhilary.net-tls
